# shindaggers

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  go.mod  go.sum  join.go
backend/: Cargo.toml  api.md  schema.sql
backend/src/: lib.rs  main.rs  twitch.rs
backend/src/routes/: users.rs
backend/tests/: health_check.rs
client/: README.md  index.html  package-lock.json  package.json  vite.config.ts
client/admin/: index.html
client/overlay/: index.html
client/src/: Admin.css  Admin.tsx  App.tsx  Button.css  Button.tsx  Card.css  Card.tsx  Catalog.tsx  CatalogCard.tsx  Chart.tsx  Creator.tsx  Event.tsx  FourOhFour.tsx  Home.css  Home.tsx  LoginButton.tsx  MiniCard.tsx  Pull.tsx  TextArtBG.tsx  User.css  User.tsx  auth.tsx  index.css  index.tsx  overlay.css  overlay.tsx  resources.ts
client/src/components/: Button.css  Button.tsx  Card.css  Card.tsx  Chart.tsx  LoginButton.tsx  MiniCard.css  MiniCard.tsx  TextArtBG.tsx  TimeAgo.tsx  (+6 more)
cmd/import/: bladechain.go  main.go  users.go
cmd/migration/: main.go
cmd/server/: api.go  main.go  routes.go  spa.go
migrations/: 001-knife.sql  002-knife.sql  003-knife.sql  004-auth.sql  005-knife.sql  006-knife.sql  007-knife.sql  009-knife.sql  010-knife.sql  011-knife.sql
pkg/db/: db.go  mockdb.go  postgres.go  sddb.go
pkg/twitch/: client.go  mock.go
supabase/: config.toml
supabase/migrations/: 20240310001332_initial-setup.sql  20240310003938_tags_as_json.sql  20240310005334_not_null.sql  20240310025206_admin_on_token.sql  20240310060426_admin_on_user_dummy.sql  20240310060736_equipped.sql
(+79 files in other folders)
